# vp

./: .gitignore  CMakeLists.txt
cmake/: FindGLEW.cmake  FindGLM.cmake
src/: CMakeLists.txt
src/core/: context.cpp  context.h  noncopyable.h  singleton.h
src/exec/: CMakeLists.txt  main.cpp
src/io/: CMakeLists.txt  obj_loader.cpp  obj_loader.h
src/model/: CMakeLists.txt  block.h  cache.h  camera.cpp  camera.h  dynamic_mesh.cpp  dynamic_mesh.h  light.cpp  light.h  manager.h  material.cpp  material.h  mesh.cpp  mesh.h  render_obj.cpp  render_obj.h  shader.cpp  shader.h  table.cpp  table.h  uniform_table.cpp  uniform_table.h  utils.cpp  utils.h
src/sculpt/: brush.cpp  brush.h  step.cpp  step.h  stroke.cpp  stroke.h  tool.h
src/shaders/: basic.frag  basic.json  basic.vert  global_uniforms.json  pick.frag  pick.json  pick.vert  wireframe.frag  wireframe.geom  wireframe.json  wireframe.vert
src/test/: CMakeLists.txt  main.cpp
src/ui/: CMakeLists.txt  viewport.cpp  viewport.h
